--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="ViewPort" content="width=device-width,initial-scale=1">
 	<title>Mall management</title>
+	<link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-	ss
 	<div id="app"></div>
 </body>
 </html>
